Add memory opts